# manahouse_micro

./: LICENSE  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json
exporter/: csv_exporter.py
lookup/: sku_sqlite.py
models/: card.py  price.py
parsers/: manabox.py
pricing/: fetch.py
processor/: enrich_and_price.py
scryfall/: enrich.py
src/mana_house/: cli.py
